@@ -1,0 +1,20 @@
+<?xml version="1.0" encoding="utf-8"?>
+<Product xmlns='http://code.google.com/p/open-zwave/'>
+  <!-- First Alert ZCombo Smoke and Carbon Monoxide Detector -->
+ 
+  <!-- Configuration -->
+  <CommandClass id="112">
+    <Value type="list" genre="config" instance="1" index="1" label="Send double alarm messages" value="0" size="1">
+      <Help>Causes the device to send double alarm messages.</Help>
+      <Item label="Disable" value="0"/>
+      <Item label="Enable" value="1"/>
+    </Value>
+  </CommandClass>
+
+  <!-- Association Groups -->
+  <CommandClass id="133">
+    <Associations num_groups="1">
+      <Group index="1" max_associations="1" label="Lifeline"/>
+    </Associations>
+  </CommandClass>
+</Product>
