@@ -110,6 +110,7 @@ Version 1.5
  - Add WiDom WDS Universal Double Switch (Nechry)
  - Add FortrezZ WV-01 Automated Water Shut-Off Valve (Nechry)
  - Pull Request #992 - Devolo Metering Plug and Permundo Plugs from tobiasgraf (Nechry)
+ - Add configuration file for First Alert ZCombo Smoke and Carbon Monoxide Detector (Nechry)
 
 Version 1.4
  - Released 10th Jan, 2016
